replaced new Float by Float.valueIf (hopefully) improving performance a tiny bit