@@ -37,7 +37,7 @@ public class StonesLevelReplacer extends AbstractRegionReplacer {
     RegionResource ironResource = region.getResource(ironType);
     if (ironResource == null)
       return null;
-    return new Integer(ironResource.getSkillLevel());
+    return Integer.valueOf(ironResource.getSkillLevel());
   }
 
   public String getDescription() {
