@@ -34,7 +34,7 @@ public class SubtractionOperator extends AbstractOperator {
    */
   @Override
   public Object compute(Object numbers[]) {
-    return new Float(((Number) numbers[0]).floatValue() - ((Number) numbers[1]).floatValue());
+    return Float.valueOf(((Number) numbers[0]).floatValue() - ((Number) numbers[1]).floatValue());
   }
 
   /**
